# cas-rl

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: code-quality-checks.yaml
casrl/: const.py  main.py  play.py  qlearning.py  train.py
casrl/entity/: abstract_agent.py  abstract_trainable_agent.py  agent.py  environment.py  obstacle.py  obstacles.py  outcome.py  position.py  reward.py  statistics.py
casrl/entity/agent/: abstract_agent.py  adversial_agent.py  playable_agent.py
casrl/entity/spaceship/: abstract_spaceship.py  adversial_spaceship.py  adversial_spaceship_entity.py  playable_spaceship.py  playable_spaceship_entity.py
casrl/entity/ufo/: ufo.py  ufo_collection.py  ufo_entity.py
casrl/enums/: action.py  outcome.py
casrl/handler/: environment_handler.py  statistics_handler.py
casrl/reward/: abstract_reward.py  reward_adversarial_spaceship.py  reward_npc.py  reward_player.py  reward_spaceship.py  reward_ufo.py
casrl/utils/: const.py  qlearning.py
tests/: conftest.py
tests/entity/: position.py
tests/entity/spaceship/: test_adversarial_spaceship_entity.py  test_playable_spaceship_entity.py
tests/entity/ufo/: test_ufo_collection.py  ufo_entity.py
tests/enums/: outcome.py
tests/mocks/: mock_agent.py
tests/reward/: test_reward_adversarial_spaceship.py  test_reward_ufo.py
tests/utils/: test_qlearning.py
