[tool.poetry]
name = "casrl"
version = "0.1.0"
description = ""
authors = ["francescoalongi <fnc.alongi@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pygame = "^2.5.2"
numpy = "^1.26.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
